# suru

./: .gitignore  CMakeLists.txt  README.md
colors/: CMakeLists.txt  Suru.colors  SuruDark.colors
kdecoration/: CMakeLists.txt  applicationmenubutton.cpp  applicationmenubutton.h  buttonbase.cpp  buttonbase.h  buttonfactory.cpp  buttonfactory.h  closebutton.cpp  closebutton.h  contexthelpbutton.cpp  contexthelpbutton.h  keepabovebutton.cpp  keepabovebutton.h  keepbelowbutton.cpp  keepbelowbutton.h  maximizebutton.cpp  maximizebutton.h  menubutton.cpp  menubutton.h  metrics.h  minimizebutton.cpp  minimizebutton.h  onalldesktopsbutton.cpp  onalldesktopsbutton.h  shadebutton.cpp  shadebutton.h  shadowprovider.cpp  shadowprovider.h  suru.json  surudecoration.cpp  surudecoration.h
